<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_List_Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:gravity="center"
        android:text="@string/a_name"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/a_teacherlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#FFF"
        android:text="@string/a_teacherlist"
        android:background="@drawable/button_style2"/>

    <Button
        android:id="@+id/a_studentlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#FFF"
        android:text="@string/a_studentlist"
        android:background="@drawable/button_style2"/>

    <Button
        android:id="@+id/a_userfind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#FFF"
        android:text="@string/a_userfind"
        android:background="@drawable/button_style2"/>

</LinearLayout>