<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminFindUser">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:gravity="center"
        android:text="@string/a_userfind"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_account"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="text"
        android:hint="@string/login_hint_userName"/>

    <Button
        android:id="@+id/finduser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="#FFF"
        android:text="@string/a_finduser"
        android:background="@drawable/button_style"/>

</LinearLayout>