<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_password_success"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/success_change"
        android:textAlignment="center"
        android:textColor="@color/firebrick"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/return_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#FFF"
        android:text="@string/return_login"
        android:background="@drawable/button_style"/>

</LinearLayout>